unpackaged/objects/Shimei__c.object
<CustomObject>
    <fields>
        <fullName>Sex__c</fullName>
        <label>性別</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>男</fullName>
                </value>
                <value>
                    <fullName>女</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shikaku__c</fullName>
        <label>資格</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shokumu__c</fullName>
        <label>職務</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>営業</fullName>
                </value>
                <value>
                    <fullName>営業内務</fullName>
                </value>
                <value>
                    <fullName>事務管理</fullName>
                </value>
                <value>
                    <fullName>業務統括</fullName>
                </value>
                <value>
                    <fullName>総合サービス</fullName>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>アテンド</fullName>
                </value>
                <value>
                    <fullName>病院医師</fullName>
                </value>
                <value>
                    <fullName>病院看護師</fullName>
                </value>
                <value>
                    <fullName>搬送業務</fullName>
                </value>
                <value>
                    <fullName>健診</fullName>
                </value>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>保険事務</fullName>
                </value>
                <value>
                    <fullName>査定</fullName>
                </value>
                <value>
                    <fullName>アジャスター</fullName>
                </value>
                <value>
                    <fullName>入力</fullName>
                </value>
                <value>
                    <fullName>財務</fullName>
                </value>
                <value>
                    <fullName>人事</fullName>
                </value>
                <value>
                    <fullName>総務</fullName>
                </value>
                <value>
                    <fullName>人事総務</fullName>
                </value>
                <value>
                    <fullName>法務</fullName>
                </value>
                <value>
                    <fullName>代表取締役</fullName>
                </value>
                <value>
                    <fullName>取締役</fullName>
                </value>
                <value>
                    <fullName>所長</fullName>
                </value>
                <value>
                    <fullName>運転手</fullName>
                </value>
                <value>
                    <fullName>掃除</fullName>
                </value>
                <value>
                    <fullName>システム</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StaffNo__c</fullName>
        <label>社員番号</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StaffStatus__c</fullName>
        <formula>IF ( TaishokuDate__c  &lt;=  TODAY() , &quot;退職者&quot;, &quot;在職者&quot;)</formula>
        <label>状態</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaishokuDate__c</fullName>
        <label>退職日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tel__c</fullName>
        <label>TEL</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TemporaryResidenceRegistration__c</fullName>
        <label>臨時住宿登記</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisaKenshinDate__c</fullName>
        <label>ビザ健診日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VisaNo__c</fullName>
        <label>ビザ番号</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisaNote__c</fullName>
        <label>ビザ備考</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisaProcedureDistrict__c</fullName>
        <label>ビザ手続地区</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>上海</fullName>
                </value>
                <value>
                    <fullName>蘇州</fullName>
                </value>
                <value>
                    <fullName>北京</fullName>
                </value>
                <value>
                    <fullName>大連</fullName>
                </value>
                <value>
                    <fullName>深セン</fullName>
                </value>
                <value>
                    <fullName>広州</fullName>
                </value>
                <value>
                    <fullName>日本</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisaType__c</fullName>
        <label>ビザ種類</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Z</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>家族</fullName>
                </value>
                <value>
                    <fullName>台湾澳人員就業証</fullName>
                </value>
                <value>
                    <fullName>就業核准証</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisaValidUntil__c</fullName>
        <label>ビザ期限</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WorkPermitCancelDate__c</fullName>
        <label>就業証取消日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WorkPermitNo__c</fullName>
        <label>就業証番号</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yakushoku__c</fullName>
        <label>役職</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>代表取締役</fullName>
                </value>
                <value>
                    <fullName>取締役</fullName>
                </value>
                <value>
                    <fullName>執行役員</fullName>
                </value>
                <value>
                    <fullName>董事</fullName>
                </value>
                <value>
                    <fullName>監事</fullName>
                </value>
                <value>
                    <fullName>本部長</fullName>
                </value>
                <value>
                    <fullName>営業総監</fullName>
                </value>
                <value>
                    <fullName>所長</fullName>
                </value>
                <value>
                    <fullName>支店長</fullName>
                </value>
                <value>
                    <fullName>部長</fullName>
                </value>
                <value>
                    <fullName>次長</fullName>
                </value>
                <value>
                    <fullName>課長</fullName>
                </value>
                <value>
                    <fullName>総経理</fullName>
                </value>
                <value>
                    <fullName>主任</fullName>
                </value>
                <value>
                    <fullName>リーダー</fullName>
                </value>
                <value>
                    <fullName>Managing Director</fullName>
                </value>
                <value>
                    <fullName>President Director</fullName>
                </value>
                <value>
                    <fullName>General Director</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>General Manager</fullName>
                </value>
                <value>
                    <fullName>Regional Manager</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>社員名簿</label>
    <listViews>
        <fullName>View</fullName>
        <columns>Cd__c</columns>
        <columns>NAME</columns>
        <columns>SeiRoma__c</columns>
        <columns>MeiRoma__c</columns>
        <columns>Busho__c</columns>
        <columns>Shokumu__c</columns>
        <columns>KinmuArea__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>X615</fullName>
        <columns>Cd__c</columns>
        <columns>KinmuArea__c</columns>
        <columns>NAME</columns>
        <columns>SeiRoma__c</columns>
        <columns>MeiRoma__c</columns>
        <columns>Busho__c</columns>
        <columns>Shokumu__c</columns>
        <columns>EmploymentSystem__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field1__c</field>
            <operation>equals</operation>
            <value>シンガポール,タイ,マレーシア</value>
        </filters>
        <filters>
            <field>TaishokuDate__c</field>
            <operation>equals</operation>
        </filters>
        <label>615.シンガポール</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>X616</fullName>
        <columns>Cd__c</columns>
        <columns>KinmuArea__c</columns>
        <columns>NAME</columns>
        <columns>SeiRoma__c</columns>
        <columns>MeiRoma__c</columns>
        <columns>Busho__c</columns>
        <columns>Shokumu__c</columns>
        <columns>EmploymentSystem__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field1__c</field>
            <operation>equals</operation>
            <value>シンガポール</value>
        </filters>
        <filters>
            <field>TaishokuDate__c</field>
            <operation>equals</operation>
        </filters>
        <label>616. シンガポール</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>X617</fullName>
        <columns>Cd__c</columns>
        <columns>KinmuArea__c</columns>
        <columns>NAME</columns>
        <columns>SeiRoma__c</columns>
        <columns>MeiRoma__c</columns>
        <columns>Busho__c</columns>
        <columns>Shokumu__c</columns>
        <columns>EmploymentSystem__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field1__c</field>
            <operation>equals</operation>
            <value>マレーシア</value>
        </filters>
        <filters>
            <field>TaishokuDate__c</field>
            <operation>equals</operation>
        </filters>
        <label>617. マレーシア</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>X618</fullName>
        <columns>Cd__c</columns>
        <columns>KinmuArea__c</columns>
        <columns>NAME</columns>
        <columns>SeiRoma__c</columns>
        <columns>MeiRoma__c</columns>
        <columns>Busho__c</columns>
        <columns>Shokumu__c</columns>
        <columns>EmploymentSystem__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field1__c</field>
            <operation>equals</operation>
            <value>タイ</value>
        </filters>
        <filters>
            <field>TaishokuDate__c</field>
            <operation>equals</operation>
        </filters>
        <label>618. タイ</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>X630</fullName>
        <columns>Cd__c</columns>
        <columns>KinmuArea__c</columns>
        <columns>NAME</columns>
        <columns>SeiRoma__c</columns>
        <columns>MeiRoma__c</columns>
        <columns>Busho__c</columns>
        <columns>Shokumu__c</columns>
        <columns>EmploymentSystem__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field1__c</field>
            <operation>equals</operation>
            <value>インド,スリランカ</value>
        </filters>
        <filters>
            <field>TaishokuDate__c</field>
            <operation>equals</operation>
        </filters>
        <label>630.南アジア</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>X631</fullName>
        <columns>Cd__c</columns>
        <columns>KinmuArea__c</columns>
        <columns>NAME</columns>
        <columns>SeiRoma__c</columns>
        <columns>MeiRoma__c</columns>
        <columns>Busho__c</columns>
        <columns>Shokumu__c</columns>
        <columns>EmploymentSystem__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field1__c</field>
            <operation>equals</operation>
            <value>インド</value>
        </filters>
        <filters>
            <field>TaishokuDate__c</field>
            <operation>equals</operation>
        </filters>
        <label>631.　インド</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>X635</fullName>
        <columns>Cd__c</columns>
        <columns>KinmuArea__c</columns>
        <columns>NAME</columns>
        <columns>SeiRoma__c</columns>
        <columns>MeiRoma__c</columns>
        <columns>Busho__c</columns>
        <columns>Shokumu__c</columns>
        <columns>EmploymentSystem__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field1__c</field>
            <operation>equals</operation>
            <value>スリランカ</value>
        </filters>
        <filters>
            <field>TaishokuDate__c</field>
            <operation>equals</operation>
        </filters>
        <label>635.　スリランカ</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>X640</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>Cd__c</columns>
        <columns>KinmuArea__c</columns>
        <columns>NAME</columns>
        <columns>SeiRoma__c</columns>
        <columns>MeiRoma__c</columns>
        <columns>Busho__c</columns>
        <columns>Shokumu__c</columns>
        <columns>EmploymentSystem__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field1__c</field>
            <operation>equals</operation>
            <value>インドネシア</value>
        </filters>
        <filters>
            <field>TaishokuDate__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>TaishokuDate__c</field>
            <operation>equals</operation>
        </filters>
        <label>640.インドネシア</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>X650</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>Cd__c</columns>
        <columns>KinmuArea__c</columns>
        <columns>NAME</columns>
        <columns>SeiRoma__c</columns>
        <columns>MeiRoma__c</columns>
        <columns>Busho__c</columns>
        <columns>Shokumu__c</columns>
        <columns>EmploymentSystem__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field1__c</field>
            <operation>equals</operation>
            <value>フィリピン</value>
        </filters>
        <filters>
            <field>TaishokuDate__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>TaishokuDate__c</field>
            <operation>equals</operation>
        </filters>
        <label>650.フィリピン</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>X660</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>Cd__c</columns>
        <columns>KinmuArea__c</columns>
        <columns>NAME</columns>
        <columns>SeiRoma__c</columns>
        <columns>MeiRoma__c</columns>
        <columns>Busho__c</columns>
        <columns>Shokumu__c</columns>
        <columns>EmploymentSystem__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field1__c</field>
            <operation>equals</operation>
            <value>カンボジア,ミャンマー</value>
        </filters>
        <filters>
            <field>TaishokuDate__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>TaishokuDate__c</field>
            <operation>equals</operation>
        </filters>
        <label>660.メコン</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>X800</fullName>
        <columns>Cd__c</columns>
        <columns>KinmuArea__c</columns>
        <columns>NAME</columns>
        <columns>SeiRoma__c</columns>
        <columns>MeiRoma__c</columns>
        <columns>Busho__c</columns>
        <columns>Shokumu__c</columns>
        <columns>EmploymentSystem__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KinmuArea__c</field>
            <operation>equals</operation>
            <value>トロント</value>
        </filters>
        <filters>
            <field>TaishokuDate__c</field>
            <operation>equals</operation>
        </filters>
        <label>800.カナダ</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>X801</fullName>
        <columns>Cd__c</columns>
        <columns>KinmuArea__c</columns>
        <columns>NAME</columns>
        <columns>SeiRoma__c</columns>
        <columns>MeiRoma__c</columns>
        <columns>Busho__c</columns>
        <columns>Shokumu__c</columns>
        <columns>EmploymentSystem__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field1__c</field>
            <operation>equals</operation>
            <value>メキシコ</value>
        </filters>
        <filters>
            <field>TaishokuDate__c</field>
            <operation>equals</operation>
        </filters>
        <label>801.メキシコ</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>X802</fullName>
        <columns>Cd__c</columns>
        <columns>KinmuArea__c</columns>
        <columns>NAME</columns>
        <columns>SeiRoma__c</columns>
        <columns>MeiRoma__c</columns>
        <columns>Busho__c</columns>
        <columns>Shokumu__c</columns>
        <columns>EmploymentSystem__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>KinmuArea__c</field>
            <operation>equals</operation>
            <value>パリ</value>
        </filters>
        <filters>
            <field>TaishokuDate__c</field>
            <operation>equals</operation>
        </filters>
        <label>802.フランス</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>x001</fullName>
        <booleanFilter>(1 OR 2) and 3</booleanFilter>
        <columns>Cd__c</columns>
        <columns>NAME</columns>
        <columns>SeiRoma__c</columns>
        <columns>MeiRoma__c</columns>
        <columns>Busho__c</columns>
        <columns>Shokumu__c</columns>
        <columns>KinmuArea__c</columns>
        <columns>NyusyaDate__c</columns>
        <columns>EmploymentSystem__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TaishokuDate__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>TaishokuDate__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>EmploymentSystem__c</field>
            <operation>notEqual</operation>
            <value>出向者</value>
        </filters>
        <label>001. 社員名簿</label>
        <sharedTo>
            <group>DeveloperName71542</group>
            <role>DeveloperName70583713081</role>
            <role>DeveloperName705837130838</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>氏名</label>
        <type>Text</type>
    </nameField>
    <recordTypes>
        <fullName>RecordType_Family</fullName>
        <active>false</active>
        <label>家族</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType_SHAIN</fullName>
        <active>true</active>
        <label>社員</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>